--- a/style.css
+++ b/style.css
@@ -148,7 +148,6 @@
   /*Goals Grid*/
   .goals-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit , minmax(250px,1fr));
     gap:25px;
     margin-top: 30px;
   }
@@ -157,6 +156,113 @@
   .goal-card {
     background-color: #fff8fc;
     color: #4b2c4f;
-    padding: 20px,25px;
-    border-radius
+    padding: 30px;
+    border-radius:15px;
+    box-shadow:0 6px 15px rgba(235,150,200,0.4);
+    transition:transform 0.2s ease;
   }
+
+  .goal-card:hover {
+    transform:translateY(-5px);
+  }
+
+  .goal-card h3 {
+    color:#a64c80;
+    font-size: xx-large;
+    font-weight: bold;
+  }
+
+  .goal-card ul {
+    list-style: none;
+  }
+  .goal-card li {
+    margin: 10px 0;
+    font-size: 1rem;
+    color: #4b2c4f;
+  }
+  
+  .goal-card input[type="checkbox"] {
+    accent-color: #ff7fbf;
+    margin-right: 10px;
+    transform: scale(1.2);
+  }
+
+  
+  .journal-form {
+    display: flex;
+    flex-direction: column;
+    gap:15px;
+    margin-top: 30px;
+    border-radius: 20px;
+    padding: 25px;
+    box-shadow: 0 6px 12px rgba(255,105,180,0.4);
+    
+  }
+
+  .journal-form input,
+  .journal-form textarea {
+    padding:20px,30px;
+    border: 1px solid #ffb6c1;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-family: inherit;
+    background-color: #fff;
+  }
+
+  
+.journal-form button {
+  background-color: #a64c80;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.journal-form button:hover {
+  background-color: #e7549f;
+}
+
+.entries-container {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.entry-card {
+  background-color: #fffafc;
+  padding: 20px;
+  border-left: 6px solid #ffb6c1;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(255, 182, 193, 0.15);
+}
+
+.entry-card h3 {
+  color: #a64c80;
+  margin-bottom: 8px;
+}
+
+.entry-card small {
+  display: block;
+  margin-bottom: 10px;
+  color: #888;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #a64c80;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  
+}
+
+button:hover {
+  background-color: #ec4899;
+}
+
